--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "./scripts/**.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "typechain-types"],
   "files": ["./hardhat.config.ts"]
 }
