--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "use-gsn": "file:../use-gsn/use-gsn-1.0.0.tgz",
     "web3modal": "1.9.8"
   },
   "devDependencies": {
